--- a/App/Home/View/Wap/Wap/sales.html
+++ b/App/Home/View/Wap/Wap/sales.html
@@ -28,6 +28,9 @@
         flex: 0 0 auto;
         max-width: 100%;
     }
+    .mt0 {
+        margin-top: 40px !important;
+    }
 </style>
 <div id="wrap" class="oe_structure oe_empty">
     <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 42%; background-image: url(https://www.odoo.com/web/image/2246578); background-size: auto 100%; opacity: 1;">
@@ -69,7 +72,7 @@
         <div class="container">
             <div class="row" style="margin-top: -50px;">
                 <div class="col-md-10 col-md-offset-1 text-center">
-                    <div class="s_browser shadow text-left">
+                    <div class="s_browser shadow text-left" style="margin-top: 25px;">
                         <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
                         <div class="content tab-content s_tooltips_tabs">
                             <div role="tabpanel" class="tab-pane in active" id="dep1">
