--- a/App/Home/View/Wap/Wap/sales.html
+++ b/App/Home/View/Wap/Wap/sales.html
@@ -1,5 +1,6 @@
 
 <link rel="stylesheet" href="__STATIC__/css/web.assets_frontend.2.css">
+<link rel="stylesheet" href="https://odoocdn.com/web/content/3605222-7677a18/web.assets_frontend.2.css">
 <style>
     .o-icon.text-gamma {
         border: 1px solid #333;
@@ -31,7 +32,7 @@
 </style>
 <div id="wrap" class="oe_structure oe_empty">
     <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 42%; background-image: url(https://www.odoo.com/web/image/2246578); background-size: auto 100%; opacity: 1;">
-        <div class="wrapper">
+        <div class="wrapper" style="margin-top: 80px;">
             <div class="container">
                 <div class="row o_v_align_col">
                     <div class="col-xs-12 col-sm-8 col-md-7 mt8 mb96">
@@ -67,9 +68,9 @@
     </section>
     <section class="o_offset_top_medium">
         <div class="container">
-            <div class="row" style="margin-top: -50px;">
+            <div class="row">
                 <div class="col-md-10 col-md-offset-1 text-center">
-                    <div class="s_browser shadow text-left">
+                    <div class="s_browser shadow text-left mt80 mb80">
                         <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
                         <div class="content tab-content s_tooltips_tabs">
                             <div role="tabpanel" class="tab-pane in active" id="dep1">
