--- a/App/Home/View/Wap/Wap/account.html
+++ b/App/Home/View/Wap/Wap/account.html
@@ -62,9 +62,9 @@
 
     <section class="o_offset_top_medium">
         <div class="container">
-            <div class="row" style="margin-top:-50px;">
+            <div class="row">
                 <div class="col-md-10 col-md-offset-1 text-center">
-                    <div class="s_browser shadow text-left" style="margin-top: 25px;">
+                    <div class="s_browser shadow text-left mt80 mb80">
                         <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
 
                         <div class="content tab-content s_tooltips_tabs">
