--- a/App/Home/View/Wap/Wap/crm.html
+++ b/App/Home/View/Wap/Wap/crm.html
@@ -68,7 +68,7 @@
         </section>
         <section class="o_offset_top_medium">
             <div class="container">
-                <div class="row" style="margin-top:-50px;">
+                <div class="row">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="s_browser shadow mt80 mb80" >
                             <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
