--- a/App/Home/View/Wap/Wap/purchase.html
+++ b/App/Home/View/Wap/Wap/purchase.html
@@ -64,9 +64,9 @@
 
     <section class="o_offset_top_medium">
         <div class="container">
-            <div class="row" style="margin-top:-50px;">
+            <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
-                    <div class="s_browser shadow" style="margin-top: 25px;">
+                    <div class="s_browser shadow mt80 mb80">
                         <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
                         <div class="content">
                             <img class="img-responsive" src="//odoocdn.com/openerp_website/static/src/img/2016/purchase/purchase_screenshot_01.gif" alt="">
