--- a/App/Home/View/Wap/Wap/sales.html
+++ b/App/Home/View/Wap/Wap/sales.html
@@ -194,8 +194,8 @@
         </div>
     </section>
     <section class="o_bottom_bar_dark bg-white o_overflow_hidden">
-        <div class="container mt92">
-            <div class="row">
+        <div class="container ">
+            <div class="row mt92">
                 <div class="col-sm-6">
                     <h2 class="display-4 fw_extralight mt0">通过
 
