--- a/App/Home/View/Wap/Wap/solutions.html
+++ b/App/Home/View/Wap/Wap/solutions.html
@@ -1,7 +1,7 @@
 <block name="content">
 <div class="solution">
     <div class="banner-bg">
-        <div class="banner-title">电商解决方案</div>
+        <div class="banner-title">ERP解决方案</div>
         <div class="banner-info"> 颠覆您的互联网商业定义</div>
         <div class="banner-btn "><a data-url="" href="javascript:;">改变，迫在眉睫！</a></div>
         <div><a href="javascript:$(document.body).animate({'scrollTop':1050},1000);" class="down-btn"></a></div>
@@ -17,57 +17,57 @@
             <div class="swiper-wrapper hproducts">
                 <div data-url="#" class="swiper-slide">
                     <div class="intro">
-                        <h2>B2B2C 商城系统</h2>
+                        <h2>丰田汽车</h2>
                         <p>流程功能最完善的电商平台系统。</p>
                     </div>
-                    <img width="430" height="500" src="__WAP__/image/ncproduct1.jpg" ></div>
+                    <img width="430" height="500" src="/images/toyota.jpg" ></div>
                 <div data-url="#" class="swiper-slide">
                     <div class="intro">
-                        <h2>Bizpower商城系统</h2>
+                        <h2>无线视点</h2>
                         <p>java技术，安全、稳定、结构合理、高并发性、强扩展性、集群部署</p>
                     </div>
-                    <img width="430" height="500" src="__WAP__/image/ncproduct2.jpg" ></div>
+                    <img width="430" height="500" src="/images/wireless.jpg" ></div>
                 <div data-url="#" class="swiper-slide">
                     <div class="intro">
-                        <h2>移动应用 APP</h2>
+                        <h2>Bertinchamps 啤酒厂</h2>
                         <p> 集购物、视频、直播为一体的全生态移动商城。</p>
                     </div>
-                    <img width="430" height="500" src="__WAP__/image/ncproduct3.jpg" ></div>
+                    <img width="430" height="500" src="/images/beer.jpg" ></div>
                 <div data-url="#" class="swiper-slide">
                     <div class="intro">
-                        <h2>分销系统</h2>
+                        <h2>CYTOSURGE</h2>
                         <p>多终端、多平台、全民分销系统。</p>
                     </div>
-                    <img width="430" height="500" src="__WAP__/image/ncproduct4.jpg" ></div>
-                <div data-url="#" class="last swiper-slide swiper-slide-active">
-                    <div class="intro">
-                        <h2>微信商城</h2>
-                        <p>H5开发全面与微信打通，包含多种微信营销功能的商城系统。</p>
-                    </div>
-                    <img width="430" height="500" src="__WAP__/image/ncproduct5.jpg" ></div>
+                    <img width="430" height="500" src="/images/cyto.jpg" ></div>
+                <!--<div data-url="#" class="last swiper-slide swiper-slide-active">-->
+                    <!--<div class="intro">-->
+                        <!--<h2>微信商城</h2>-->
+                        <!--<p>H5开发全面与微信打通，包含多种微信营销功能的商城系统。</p>-->
+                    <!--</div>-->
+                    <!--<img width="430" height="500" src="/images/" ></div>-->
             </div>
             <div class="prev5 hprev"></div>
             <div class="next5 hnext"></div>
         </div>
     </div>
-    <div class="sol-content">
-        <div class="sol-content-tit">
-            <h2>ShopNC为您提供专业的电商解决方案</h2>
-            <p class="info justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;作为专业的企业级电商系统提供商，我们沉淀了9年的行业项目经验，为超过800家知名品牌及零售企业提供适合的针对性解决方案，帮助企业适应市场发展浪潮、响应业务变化拓展。</p>
-        </div>
-    </div>
-    <div class="swiper-slide">
-        <ul>
-            <li><a class="pic1" href="general.html" >综合百货行业解决方案</a></li>
-            <li><a class="pic2" href="medicine.html" >医药行业解决方案</a></li>
-            <li><a class="pic3" href="cbes.html" >跨境零售行业<br>
-                三种跨境模式</a></li>
-            <li><a class="pic4" href="O2O.html" >社区O2O行业<br>
-                线上线下完美结合</a></li>
-            <li><a class="pic5" href="industrial.html" >工业品行业解决方案</a></li>
-            <li><a class="pic6" href="car.html" >汽车行业解决方案</a></li>
-        </ul>
-    </div>
+    <!--<div class="sol-content">-->
+        <!--<div class="sol-content-tit">-->
+            <!--<h2>ShopNC为您提供专业的电商解决方案</h2>-->
+            <!--<p class="info justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;作为专业的企业级电商系统提供商，我们沉淀了9年的行业项目经验，为超过800家知名品牌及零售企业提供适合的针对性解决方案，帮助企业适应市场发展浪潮、响应业务变化拓展。</p>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="swiper-slide">-->
+        <!--<ul>-->
+            <!--<li><a class="pic1" href="general.html" >综合百货行业解决方案</a></li>-->
+            <!--<li><a class="pic2" href="medicine.html" >医药行业解决方案</a></li>-->
+            <!--<li><a class="pic3" href="cbes.html" >跨境零售行业<br>-->
+                <!--三种跨境模式</a></li>-->
+            <!--<li><a class="pic4" href="O2O.html" >社区O2O行业<br>-->
+                <!--线上线下完美结合</a></li>-->
+            <!--<li><a class="pic5" href="industrial.html" >工业品行业解决方案</a></li>-->
+            <!--<li><a class="pic6" href="car.html" >汽车行业解决方案</a></li>-->
+        <!--</ul>-->
+    <!--</div>-->
 </div>
 </block>
 <block name="js">
