--- a/App/Home/View/Wap/Wap/solutions.html
+++ b/App/Home/View/Wap/Wap/solutions.html
@@ -39,12 +39,12 @@
                         <p>多终端、多平台、全民分销系统。</p>
                     </div>
                     <img width="430" height="500" src="/images/cyto.jpg" ></div>
-                <!--<div data-url="#" class="last swiper-slide swiper-slide-active">-->
-                    <!--<div class="intro">-->
-                        <!--<h2>微信商城</h2>-->
-                        <!--<p>H5开发全面与微信打通，包含多种微信营销功能的商城系统。</p>-->
-                    <!--</div>-->
-                    <!--<img width="430" height="500" src="/images/" ></div>-->
+                <div data-url="#" class="last swiper-slide swiper-slide-active">
+                    <div class="intro">
+                        <h2>帝国快递</h2>
+                        <p>H5开发全面与微信打通，包含多种微信营销功能的商城系统。</p>
+                    </div>
+                    <img width="430" height="500" src="/images/empire.jpg" ></div>
             </div>
             <div class="prev5 hprev"></div>
             <div class="next5 hnext"></div>
