--- a/App/Home/View/Wap/Wap/index.html
+++ b/App/Home/View/Wap/Wap/index.html
@@ -24,17 +24,20 @@
 <div class="product">
   <ul>
     <li class="B2B2C">
-      <p>B2B2C多用户商城系统</p>
-      流程功能及模块最完善的电商平台系统 <span>商城、资讯、圈子、微商城、即时通讯</span> <a href="B2B2C.html" >进一步了解 &gt;</a> </li>
+      <p>CRM</p>
+      真实客户为中心的CRM <a href="{:U('crm')}" >进一步了解 &gt;</a> </li>
     <li class="B2B">
-      <p>多用户商城系统</p>
-      满足于B2B&B2B2C的电商销售系统 <span>构筑生态级多用户商城平台</span> <a href="Bizpower.html" >进一步了解 &gt;</a> </li>
+      <p>销售模块</p>
+      业务流程一体及促进订单成交<a href="{:U('sales')}" >进一步了解 &gt;</a> </li>
     <li class="O2O">
-      <p>移动端商城</p>
-      开发Android及iOS APP应用 <span>与PC端完全打通 随时随地 自由购物</span> <a href="APP.html" >进一步了解 &gt;</a> </li>
+      <p>仓库模块</p>
+      现代化在线仓库，实现效率最大化 <a href="{:U('warehouse')}" >进一步了解 &gt;</a> </li>
     <li class="C2C">
-      <p>行业解决方案</p>
-      让企业拥有互联网力量 <span>帮助企业构筑围绕用户的营销互动能力</span> <a href="solutions.html" >进一步了解 &gt;</a> </li>
+      <p>采购模块</p>
+      改善您的供业链和库存绩效 <a href="{:U('purchase')}" >进一步了解 &gt;</a> </li>
+    <li class="C2C">
+      <p>财务模块</p>
+      用更少的时间，做更多的事情<a href="{:U('account')}" >进一步了解 &gt;</a> </li>
   </ul>
 </div>
 </block>
