--- a/App/Home/View/default/Index/aboutus.html
+++ b/App/Home/View/default/Index/aboutus.html
@@ -2,7 +2,7 @@
 <link href="__STATIC__/css/style.css"  rel="stylesheet">
 <style>
 #top{background:url("__STATIC__/images/top_bg2.png") center;}
-.banner-layout{ margin-top:99px;}
+.banner-layout{ margin-top:0px;}
 #mapBox p{ line-height:20px !important; margin:0 !important; text-indent:0 !important}
 </style>
 <script type="text/javascript" src="../api.map.baidu.com/api-key=&v=1.1&services=true" ></script>
@@ -116,7 +116,7 @@
         <div id="tab-1" class="tabs-content">
           <dl>
             <dt>岗位职责：</dt>
-            <dd>1、完成宣汉7yun商城系统的功能开发；</dd>
+            <dd>1、完成Wokoo系统的功能开发；</dd>
             <dd>2、完成定制项目的开发。</dd>
             <dt>任职资格：</dt>
             <dd>1、两年以上B/S软件开发工作经验，熟悉PHP开发语言；</dd>
@@ -133,7 +133,7 @@
         <div id="tab-2" class="tabs-content">
           <dl>
             <dt>岗位职责：</dt>
-            <dd>1、完成宣汉7yun商城系统Android客户端的应用需求分析和产品设计；</dd>
+            <dd>1、完成Wokoo系统Android客户端的应用需求分析和产品设计；</dd>
             <dd>2、完成定制项目的开发，依据开发计划进行编码和测试。</dd>
             <dt>任职资格：</dt>
             <dd>1、两年以上软件开发工作经验，具备完整Android应用开发经验；</dd>
@@ -231,8 +231,8 @@
             <dd>5、大专以上学历，形象气质佳者优先。</dd>
           </dl>
         </div>
-        <p class="hr-note">*招聘详情请致电人力资源部，电话：13764388946；<br/>
-          有意者请将简历发送至 <a href="mailto:wchangkan@sohu.com">wchangkan@sohu.com</a>，标题请注明“宣汉7yun工作求职”。</p>
+        <p class="hr-note">*招聘详情请致电人力资源部，电话：15618331655；<br/>
+          有意者请将简历发送至 <a href="mailto:jimmy@youbaninfo.com">jimmy@youbaninfo.com</a>，标题请注明“Wokoo系统工作求职”。</p>
       </div>
     </div>
   </section>
