--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -44,23 +44,25 @@ $(function(){
         <ul>
           <li class="p1"> <a class="box" href="" >
                 <div class="pic"></div>
-                <span>PHP电商系统</span> </a>
+                <span>成长型企业</span> </a>
                 <dl>
                   <dt></dt>
                   <dd>
-                    <p>PHP电商系统是目前国内最领先的电商产品。包括商城、CMS、圈子、微商城、聊天等多套系统满足各类型企业电商化发展需求。</p>
-                    <a href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a></dd>
+                    <p>Wokoo 推出的这些面向中小型企业的软件中，有价格在你承受范围内的业务管理软件、行业特定的 ERP 解决方案和功能强大的业务分析软件，</p>
+                    <!--<a href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a>-->
+                  </dd>
                 </dl>
               </li>
 
               <li class="p2"> <a class="box" href="" >
                 <div class="pic"></div>
-                <span>B2B2C多商户</span> </a>
+                <span>实现数字化转型</span> </a>
                 <dl>
                   <dt></dt>
                   <dd>
-                    <p>采用PHP技术进行分层开发，选用目前主流的MVC开发方式，配套微信商城、APP商城移动前端，丰富的互动营销功能，精细化的用户运营，充分挖掘巨大移动电商市场潜力。</p>
-                    <a href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a></dd>
+                    <p>从制定战略到实施、优化和维护  解决方案，我们的服务计划和服务包能够在整个数字化转型之旅为你提供指导。</p>
+                    <!--<a href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a>-->
+                    </dd>
                 </dl>
               </li>
 
@@ -70,8 +72,7 @@ $(function(){
                 <dl>
                   <dt></dt>
                   <dd>
-                    <p>iOS/Android/WAP移动应用与商城平台的紧密结合始终是我们开发的重点，移动应用也将是未来O2O电商发展的未来。</p>
-                    <a href="{:U('mobile-ios')}" >查看详情<i class="fa fa-caret-right"></i></a></dd>
+                    <p>iOS/Android/WAP移动应用与ERP系统的紧密结合始终是我们开发的重点，移动应用也将是未来企业管理发展的未来。</p>
                 </dl>
               </li>
 
@@ -81,8 +82,9 @@ $(function(){
                 <dl>
                   <dt></dt>
                   <dd>
-                    <p>我们总结多年网上商城配套服务程序开发的实际经验与案例，为不同经营类型、不同行业特点的企业客户提供最佳的电商解决方案。</p>
-                    <a href="{:U('solution-list')}" >查看详情<i class="fa fa-caret-right"></i></a></dd>
+                    <p>我们总结多年ERP配套服务程序开发的实际经验与案例，为不同类型、不同行业的企业客户提供最佳的ERP解决方案。</p>
+                    <!--<a href="{:U('solution-list')}" >查看详情<i class="fa fa-caret-right"></i></a>-->
+                  </dd>
                 </dl>
               </li>
           </ul>
@@ -93,7 +95,7 @@ $(function(){
 <div class="business-model-box">
   <div class="business-model">
     <h2>21世纪最具创新的企业管理系统</h2>
-    <h3>随着时代的发展，电商领域被细分为多种商业模式，悟空系统根据不同的业务模式专注于企业级系统开发领域</h3>
+    <h3>随着时代的发展，ERP领域被细分为多种商业模式，悟空系统根据不同的业务模式专注于企业级系统开发领域</h3>
   </div>
   <div class="index-model-box">
     <div class="index-model">
