--- a/App/Home/View/default/Index/solution-list.html
+++ b/App/Home/View/default/Index/solution-list.html
@@ -6,7 +6,7 @@
 </style>
 <div class="about-top-banner top-banner" style="background:url(__STATIC__/images/solution-banner.jpg) center no-repeat; height:354px;"></div>
 <div class="middle">
-<h1 style="color:#000; font-size:36px; text-align:center; padding:60px 0px 16px;">宣汉7yun为您提供专业的电商解决方案</h1>
+<h1 style="color:#000; font-size:36px; text-align:center; padding:60px 0px 16px;">柚伴为您提供专业的ERP解决方案</h1>
 <h2 style="color:#666; font-size:14px; text-align:center; padding:0px">专业的服务，高效的方案</h2>
 </div>
 <div class="product-content">
