--- a/App/Home/View/Wap/Wap/about.html
+++ b/App/Home/View/Wap/Wap/about.html
@@ -11,15 +11,15 @@
             <h2>公司简介</h2>
             <h4>Company Introduction</h4>
 
-            <p class="info justify">天津市网城天创科技有限责任公司，是中国领先的电商软件开发、服务提供商。公司位于天津市和平区，是一家拥有自主知识产权的互联网软件企业。公司长期专注于电商行业发展，并为企业客户提供高质量的软件产品、解决方案的研发和服务。公司拥有互联网软件研发及具备丰富电商运营经验的精英团队，是中国最专业的电商软件企业之一。</p>
+            <p class="info justify"></p>
         </div>
         <img alt="" src="__WAP__/image/about-img.jpg">
         <div class="about-con-tit pb10">
             <h2>核心产品</h2>
             <h4>Core Product</h4>
             <p class="info justify" style="border-bottom:1px solid #e7e7e7; padding-bottom:30px; ">公司核心产品
-                “ShopNC”，是国内应用范围最大、覆盖面最广的电商软件产品，基于此，历经9年的时间，而发展成为国内最先进的具备成熟且标准化的电商平台技术解决方案提供商。“ShopNC”
-                的每一次新产品发布都引领着中国电商软件研发领域的潮流。同时公司建立了由多名科学家构成的行业及技术研究中心，对电商行业发展趋势、软件产品架构、技术领先性、新技术应用与创新等都做出了卓越贡献。</p>
+                “Wokoo”，是国内外应用范围最大、覆盖面最广的ERP软件产品，基于此，历经5年的时间，而发展成为国内外最先进的具备成熟且标准化的ERP技术解决方案提供商。“Wokoo”
+                的每一次更新都引领着全球ERP软件研发领域的潮流。同时公司建立了由多名科学家构成的行业及技术研究中心，对电商行业发展趋势、软件产品架构、技术领先性、新技术应用与创新等都做出了卓越贡献。</p>
         </div>
 
 
@@ -27,7 +27,7 @@
             <h2>联系方式</h2>
             <h4>Contact Details</h4>
 
-            <p class="ads">天津市和平区创新大厦A座12层</p>
+            <p class="ads">上海市杨浦区杨树浦路1058号滨江国际广场1号楼3层</p>
             <span><img alt="" src="__WAP__/image/map.jpg"></span>
         </div>
 
