--- a/App/Home/View/Wap/Wap/apply.html
+++ b/App/Home/View/Wap/Wap/apply.html
@@ -7,7 +7,7 @@
          
     </div>
     <div class="heading">
-        <h2>亲爱的用户，欢迎您光临柚伴信息</h2>
+        <h2>亲爱的用户，欢迎您光临悟空系统</h2>
         <span>请您填写以下信息，我们会及时给您提供详细资料和解答。</span>
     </div>
 
