--- a/App/Home/View/Wap/Wap/index.html
+++ b/App/Home/View/Wap/Wap/index.html
@@ -23,7 +23,7 @@
 </script>
 <div class="product">
   <ul>
-    <li class="B2B2C">
+    <li class="C2C">
       <p>CRM</p>
       真实客户为中心的CRM <a href="{:U('crm')}" >进一步了解 &gt;</a> </li>
     <li class="B2B">
