--- a/App/Home/View/Wap/Wap/solutions.html
+++ b/App/Home/View/Wap/Wap/solutions.html
@@ -8,8 +8,8 @@
     </div>
     <div class="sol-content">
         <div class="sol-content-tit">
-            <h2 id="content">为您提供专业的电商解决方案</h2>
-            <p class="info justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司建立了一整套以 “ShopNC”标准化电商软件为基础的电商建设解决方案。包括基于不同运维模式的B2B2C、B2B、B2C、O2O、C2C、C2B等被企业用户广泛使用的电商软件产品，还包括基于汽车、百货、医疗、母婴、电视、跨境、工业品、社区等行业的具体解决方案。</p>
+            <h2 id="content">为您提供专业的ERP解决方案</h2>
+            <p class="info justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司建立了一整套以 Wokoo 标准化ERP软件为基础的企业管理系统解决方案。包括基于不同运维模式的企业用户广泛使用的ERP软件产品，还包括基于汽车、百货、医疗、母婴、电视、跨境、工业品、社区等行业的具体解决方案。</p>
         </div>
     </div>
     <div class="pro-box" style=" height:540px;">
