--- a/Public/Static/css/style.css
+++ b/Public/Static/css/style.css
@@ -134,7 +134,7 @@ border: solid 1px #EEE; overflow: hidden; }
 /*关于 banner*/
 
 .banner-about {background-color:#F5F5F5;}
-.banner-about .banner { background: url("../images/about/about_banner.png") no-repeat 0 10px; height: 300px; margin: 0 auto;}
+.banner-about .banner { background: url("../images/2.jpg") no-repeat 0 10px; height: 300px; margin: 0 auto;}
 
 
 /* ===================
