--- a/App/Home/View/default/Common/footer.html
+++ b/App/Home/View/default/Common/footer.html
@@ -51,7 +51,7 @@
       </div>
   
      <div class="solution">
-        <div class="tel-num" style="margin:16px 0px 6px"><a target="_blank" href="jhttp://wpa.qq.com/msgrd?v=3&uin=2850515883&site=qq&menu=yes" >
+        <div class="tel-num" style="margin:16px 0px 6px"><a target="_blank" href="jhttp://wpa.qq.com/msgrd?v=3&uin={$vo}&site=qq&menu=yes" >
           <img border="0" src="__STATIC__/images/im/qq_ico.png"  alt="解决方案"/></a>
         </div>
       </div>
