--- a/App/Home/View/default/Index/aboutus.html
+++ b/App/Home/View/default/Index/aboutus.html
@@ -59,7 +59,7 @@
           </dl>
           <dl>
             <dt>Email</dt>
-            <dd>wchangkan@sohu.com</dd>
+            <dd>jimmy@youbaninfo.com</dd>
           </dl>
           
 		   </div>
