--- a/App/Home/View/Wap/Wap/apply.html
+++ b/App/Home/View/Wap/Wap/apply.html
@@ -42,7 +42,8 @@
                 <label for="phone" class="control-label"><span class="red">*</span>手机号码</label>
             </div>
              <div class="form-group">
-                <div class="col-xs-8" style="padding-left:0px !important;">
+                <!--<div class="col-xs-8" style="padding-left:0px !important;">-->
+                 <div>
                     <input type="text" class="form-control" id="phone" name="phone" placeholder="请输入手机号码">
                 </div>
                  <!--<a href="javascript:void(0);" class="btn btn-primary col-xs-2" style="margin-left:0px; width:33%; padding:8px 12px; background:#fb3f00; border:none" id="sms_captcha1">获取验证码</a>-->
