--- a/App/Home/View/Wap/Wap/about.html
+++ b/App/Home/View/Wap/Wap/about.html
@@ -11,7 +11,7 @@
             <h2>公司简介</h2>
             <h4>Company Introduction</h4>
 
-            <p class="info justify"></p>
+            <p class="info justify">上海柚伴信息科技有限公司，始建于2013年。是国内企业级应用服务提供商中的一只新生力量。旗下核心产品“悟空系统”是柚伴公司面向企业研发的互联网+ERP系统。依托强大的资金实力、先进的信息系统及专业的管理人才，公司在电气设备、能源、信息、电子商务等行业及领域精耕细作，形成了强大的供应链资源网络、解决方案设计及执行能力，提供包括：财务、采购、客户关系管理、销售、仓储等在内的一体化供应链解决方案，协助客户降低成本、提高效率、 加快资金周转， 扩大业务规模， 达成发展目标。</p>
         </div>
         <img alt="" src="__WAP__/image/about-img.jpg">
         <div class="about-con-tit pb10">
@@ -28,7 +28,7 @@
             <h4>Contact Details</h4>
 
             <p class="ads">上海市杨浦区杨树浦路1058号滨江国际广场1号楼3层</p>
-            <span><img alt="" src="__WAP__/image/map.jpg"></span>
+            <!--<span><img alt="" src="__WAP__/image/map.jpg"></span>-->
         </div>
 
 
