--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -10,7 +10,7 @@
 <div class="topnav" id="topnav"> 
   <!--<div class="clear"></div>-->
   <div class="top-wrap">
-    <div class="top-logo"><a href="{:U('index')}"  title="ShopNC" ><img src="/{:get_image_path($config['logo'])}"  width="auto" height="100%" alt="{$config.company_name}"/></a></div>
+    <div class="top-logo"><a href="{:U('index')}"  title="ShopNC" ><img src="/{:get_image_path($config['logo'])}"  alt="{$config.company_name}"/></a></div>
     <ul class="top-nav primary">
       <li class="nav-list"><a href="{:U('index')}"  class="nav-list-link" title="首页">首页</a></li>
       <li class="nav-list nav-l" style="position:relative;"><a href="javascript:void(0);" class="nav-list-link nav-arrow" title="产品模块">产品模块<i></i></a>
