--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -104,7 +104,7 @@ $(function(){
               <span>CRM</span> </a>
               <dl>
                 <dt>真实客户为中心的CRM </dt>
-                <dd> <a class="lf-a fl" href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
 
@@ -120,7 +120,7 @@ $(function(){
               <span>采购模块</span> </a>
               <dl>
                 <dt>改善您的供业链和库存绩效</dt>
-                <dd> <a class="lf-a fl" href="mall-o2o.html" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
 
@@ -241,21 +241,21 @@ $(function(){
         <div class="pic fa fa-5x fa-envelope"></div>
         <dl>
           <dt>电邮推广</dt>
-          <dd>商城预存款、在线支付、商城充值卡，多种形式的账户付款方式既让会员的账户安全可靠又灵活多样。</dd>
+          <dd>市场营销易用，拖放编辑器。在您构建模块的可编辑内容中直接实时添加文字和图形，并实时预览邮件的最终效果。</dd>
         </dl>
         </a> </li>
       <li class="f14"><a><span></span>
         <div class="pic fa fa-5x fa-firefox"></div>
         <dl>
           <dt>网站生成器</dt>
-          <dd>买家可对完成的订单进行评价和晒单，也可在微商城、圈子等多频道进行分享，更可分享至站外微博微信。</dd>
+          <dd>您的企业网站建立器，所见即所得。通过我们简洁的 WYSIWYG 编辑器插入文本样式，如标题、黑体、斜体、列表和字体。灵活且易用。构建模块系统，通过拖放完全定制的预制构建模块，从头开始创建您的页面。</dd>
         </dl>
         </a> </li>
       <li class="f15"><a><span></span>
         <div class="pic fa fa-5x fa-user"></div>
         <dl>
           <dt>在线客服</dt>
-          <dd>量身定制iOS/Android/Wap版手机应用以及微信管理，微信支付等功能让商城在移动终端市场占据相应份额</dd>
+          <dd>在线与您的客户沟通，个性化窗口行为。定义在线客服 按键出现方式。决定是否自动打开聊天界面及打开之前的等待时长。随处回复，可从任一模块、在前端和后端访问在线客服功能，以便跟踪每一次对话。</dd>
         </dl>
         </a> </li>
     </ul>
