--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -3,7 +3,7 @@
     <div class="left">售前电话：<b>{$config.pre_phone}</b></div>
     <div class="right">
             <!--<span class="mr30"><a href="{:U('login')}"  style="color:#ddddde" title="会员登录" target="_blank">会员登录</a> | <a href="{:U('login-register')}"  style="color:#ddddde" title="注册" target="_blank">注册</a></span>-->
-            <span class="mr30"><a href="http://yanshi.youbaninfo.com/web/login"  style="color:#ddddde" title="我要试用" target="_blank">我要试用</a></span>
+            <span class="mr30"><a href="/index.php/Index/solution-list.html#im"  style="color:#ddddde" title="我要试用" target="_blank">我要试用</a></span>
           </div>
   </div>
 </div>
