--- a/App/Home/View/default/Index/im.html
+++ b/App/Home/View/default/Index/im.html
@@ -3,7 +3,7 @@
     <div class="page-location" id="guestBook">&nbsp;</div>
     <div class="wrap">
       <div class="title">
-        <h2>我想在线咨询提问题?</h2>
+        <h2>我要试用</h2>
         <h4>让我们为您诠释该套系统的历史、发展及未来</h4>
       </div>
       <div class="content">
