--- a/Public/Static/css/home.css
+++ b/Public/Static/css/home.css
@@ -95,7 +95,7 @@ input,select{vertical-align:middle}
 /*banner*/
 #banner{position:relative; top:0px;margin:0px auto;width:100%;height:570px;overflow:hidden;zoom:1;}
 #banner .slides{zoom:1;}
-#banner .slides li{ width:100%; height:570px;background-size: cover !important;}
+#banner .slides li{ width:100%; height:570px;}
 .flex-viewport{max-height:2000px;-webkit-transition:all 1s ease;-moz-transition:all 1s ease;transition:all 1s ease;}
 .flex-direction-nav a{width:60px;height:90px;line-height:99em;overflow:hidden;margin:0;display:block;background:url("../images/banner-next.png"/*tpa=http://www.shopnc.net/images/banner-next.png*/) no-repeat;position:absolute;top:46%;z-index:10;cursor:pointer;opacity:0;filter:alpha(opacity=0);-webkit-transition:all .3s ease;}
 .flex-direction-nav .flex-next{background-position:0 -90px;right:0;}
