--- a/App/Home/View/default/Index/aboutus.html
+++ b/App/Home/View/default/Index/aboutus.html
@@ -57,9 +57,13 @@
             <dt>商务洽谈</dt>
             <dd>021-6128 0923</dd>
           </dl>
-          <dl>
+          <dl style="width: 260px">
             <dt>Email</dt>
             <dd>jimmy@youbaninfo.com</dd>
+          </dl>
+          <dl style="width: 300px">
+            <dt>地址</dt>
+            <dd>上海市杨浦区杨树浦路滨江国际广场1号楼3楼</dd>
           </dl>
           
 		   </div>
