--- a/App/Home/View/default/Index/crm.html
+++ b/App/Home/View/default/Index/crm.html
@@ -188,7 +188,7 @@
 
 </style>
     <div id="wrap" class="oe_structure">
-        <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 45%; background-image: url(https://www.odoo.com/openerp_website/static/src/img/2016/crm/crm_top_banner.jpg); background-size: auto 100%; opacity: 1;">
+        <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 45%; background-image: url(/Public/Static/images/crm_top_banner.jpg); background-size: auto 100%; opacity: 1;">
             <div class="wrapper">
                 <div class="container">
                     <div class="row o_v_align_col_sm">
