--- a/App/Home/View/default/Index/aboutus.html
+++ b/App/Home/View/default/Index/aboutus.html
@@ -51,11 +51,11 @@
         <div class="contact-detail">
           <dl>
             <dt>咨询电话</dt>
-            <dd>021-6128 0923</dd>
+            <dd>400-117-1989</dd>
           </dl>
           <dl>
-            <dt>商务洽谈</dt>
-            <dd>021-6128 0923</dd>
+            <dt>商务合作</dt>
+            <dd>13482489744</dd>
           </dl>
           <dl style="width: 260px">
             <dt>Email</dt>
